--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,12 @@
 </head>
 <body>
 <div class="container">
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="/">
+      <h1 class="title">micro swagger</h1>
+    </a>
+    </nav>
 <div class="center">
 
     <aside class="menu">
