--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,10 @@
 function revealStage(stage){
   const list = document.querySelector('#' + stage);
   if(list.style.display == 'none'){
-    list.style.display = 'block'
+    list.style.display = 'block';
   }
   else{
-    list.style.display = 'none'
+    list.style.display = 'none';
   }
 }
 </script>
