--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,24 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>micro swagger</title>
-
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <meta name="theme-color" content="#ffffff">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css" />
      <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <style>
-    .center {
+    .top {
     margin-top: 5%;
+    }
+    .center {
+      display: flex;
+    align-items: center;
+    justify-content: center;
     }
     </style>
 </head>
 <body>
+    <nav class="navbar center" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="" href="/">
+            <h1 class="title">micro swagger</h1>
+            <!-- <img src="/assets/logo.png"> -->
+          </a>
+          </div>
+          </nav>
 <div class="container">
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="/">
-      <h1 class="title">micro swagger</h1>
-    </a>
-    </nav>
-<div class="center">
+
+<div class="top">
 
     <aside class="menu">
   <p class="menu-label">
@@ -41,7 +52,6 @@
 
   </ul>
 </aside>
-</div>
 </div>
 
 <script>
