--- a/views/swagger-editor.ejs
+++ b/views/swagger-editor.ejs
@@ -1,101 +1,118 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Swagger Editor</title>
   <style>
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: Roboto,sans-serif;
-    font-size: 9px;
-    line-height: 1.42857143;
-    color: #444;
-    margin: 0px;
-  }
-  #swagger-editor {
-    font-size: 1.3em;
-  }
-  .container {
-    height: 100%;
-    max-width: 880px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #editor-wrapper {
-    height: 100%;
-    border:1em solid #000;
-    border:none;
-  }
-  .Pane2 {
-    overflow-y: scroll;
-  }
-  .topbar {
-    background-color: #1b1b1b;
-    width: 100%;
-}
-.topbar-wrapper {
-    padding: 0.7em;
-    display: -ms-flexbox;
-    display: flex;
-}
- .topbar-wrapper > * {
-    margin-left: 1em;
-    margin-right: 1em;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
-    color: white;
-    font-size: 1.0em;
-    font-weight: 500;
-}
-.topbar-wrapper .menu-item {
-    cursor: pointer;
-    font-size: 14px;
-}
-.dd-menu .dd-menu-items ol, #swagger-editor .dd-menu .dd-menu-items ul {
-    border-radius: 0 0 4px 4px;
-}
-.dd-menu .dd-menu-items ul, .dd-menu .dd-menu-items ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    color: #000;
-    background-color: #fefefe;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.29);
-}
-.dd-menu .dd-menu-items ul li > *:not(.dd-item-ignore), .dd-menu .dd-menu-items ol li > *:not(.dd-item-ignore) {
-    display: block;
-    width: auto;
-    min-width: 100%;
-    padding: 1em 1.5em;
-    font-family: Roboto, sans-serif;
-    white-space: pre;
-    color: inherit;
-    text-decoration: none;
-    font-size: 13px !important;
-}
-.update {
-  font-size: 17px;
-    color: white;
-    position: absolute;
-    right: 10px;
-    line-height: 2.7;
-}
-  </style>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor.css">
+    * {
+      box-sizing: border-box;
+    }
 
-   
+    body {
+      font-family: Roboto, sans-serif;
+      font-size: 9px;
+      line-height: 1.42857143;
+      color: #444;
+      margin: 0px;
+    }
+
+    #swagger-editor {
+      font-size: 1.3em;
+    }
+
+    .container {
+      height: 100%;
+      max-width: 880px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    #editor-wrapper {
+      height: 100%;
+      border: 1em solid #000;
+      border: none;
+    }
+
+    .Pane2 {
+      overflow-y: scroll;
+    }
+
+    .topbar {
+      background-color: #1b1b1b;
+      width: 100%;
+    }
+
+    .topbar-wrapper {
+      padding: 0.7em;
+      display: -ms-flexbox;
+      display: flex;
+    }
+
+    .topbar-wrapper>* {
+      margin-left: 1em;
+      margin-right: 1em;
+      -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+      color: white;
+      font-size: 1.0em;
+      font-weight: 500;
+    }
+
+    .topbar-wrapper .menu-item {
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .dd-menu .dd-menu-items ol,
+    #swagger-editor .dd-menu .dd-menu-items ul {
+      border-radius: 0 0 4px 4px;
+    }
+
+    .dd-menu .dd-menu-items ul,
+    .dd-menu .dd-menu-items ol {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      color: #000;
+      background-color: #fefefe;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.29);
+    }
+
+    .dd-menu .dd-menu-items ul li>*:not(.dd-item-ignore),
+    .dd-menu .dd-menu-items ol li>*:not(.dd-item-ignore) {
+      display: block;
+      width: auto;
+      min-width: 100%;
+      padding: 1em 1.5em;
+      font-family: Roboto, sans-serif;
+      white-space: pre;
+      color: inherit;
+      text-decoration: none;
+      font-size: 13px !important;
+    }
+
+    .update {
+      font-size: 17px;
+      color: white;
+      position: absolute;
+      right: 10px;
+      line-height: 2.7;
+    }
+  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor.css">
+
+
 </head>
 
 <body>
-  <a class="update" href="/update?path=<%= configFileLocation %>">Update AWS ApiGateway</a> 
+  <a class="update" href="/update?path=<%= swaggerFileLocation %>&id=<%= id %>">Update AWS ApiGateway</a>
   <div id="swagger-ui"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor-bundle.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor-standalone-preset.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor-bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@3.6.28/swagger-editor-standalone-preset.js"></script>
   <script>
     function TransmitOnChangePlugin(system) {
       return {
@@ -115,24 +132,24 @@
         }
         var spec = args[0];
         ori.apply(undefined, args);
-         const lastState = localStorage.getItem("swagger-editor-content-state");
-      
-         if(lastState !== spec){
-           localStorage.setItem("swagger-editor-content-state", spec);
-        transmitUpdate(spec)
-         }
-        
+        const lastState = localStorage.getItem("swagger-editor-content-state");
+
+        if (lastState !== spec) {
+          localStorage.setItem("swagger-editor-content-state", spec);
+          transmitUpdate(spec)
+        }
+
       }
     }
     function transmitUpdate(str) {
       return $.ajax({
-        url: "/editor?path=<%= configFileLocation %>",
+        url: "/editor?path=<%= swaggerFileLocation %>",
         type: "PUT",
         data: str,
-        success: function(data) {
+        success: function (data) {
           console.log(data);
         },
-        error:function(e) {
+        error: function (e) {
           console.log(e);
         },
       });
@@ -140,57 +157,65 @@
     window.TransmitOnChangePlugin = TransmitOnChangePlugin
   </script>
   <script>
-  window.onload = function() {
-    const lastState = localStorage.setItem("swagger-editor-content","");
-    var editor = SwaggerEditorBundle({
-        url: '<%= configFileLocation %>',
-  dom_id: "#swagger-ui",
-      layout: 'StandaloneLayout',
-      presets: [
-        SwaggerEditorStandalonePreset
-      ],
-      plugins: [
-        TransmitOnChangePlugin
-      ]
-    });
-    window.editor = editor;
-    document.querySelector(".link").href = "/"
-  }
+    window.onload = function () {
+      const lastState = localStorage.setItem("swagger-editor-content", "");
+      var editor = SwaggerEditorBundle({
+        url: '<%= swaggerFileLocation %>',
+        dom_id: "#swagger-ui",
+        layout: 'StandaloneLayout',
+        presets: [
+          SwaggerEditorStandalonePreset
+        ],
+        plugins: [
+          TransmitOnChangePlugin
+        ]
+      });
+      window.editor = editor;
+      document.querySelector(".link").href = "/"
+    }
   </script>
 
-  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+    style="position:absolute;width:0;height:0">
     <defs>
       <symbol viewBox="0 0 20 20" id="unlocked">
-            <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"></path>
+        <path
+          d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z">
+        </path>
       </symbol>
 
       <symbol viewBox="0 0 20 20" id="locked">
-        <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"/>
+        <path
+          d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z" />
       </symbol>
 
       <symbol viewBox="0 0 20 20" id="close">
-        <path d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"/>
+        <path
+          d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z" />
       </symbol>
 
       <symbol viewBox="0 0 20 20" id="large-arrow">
-        <path d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"/>
+        <path
+          d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z" />
       </symbol>
 
       <symbol viewBox="0 0 20 20" id="large-arrow-down">
-        <path d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"/>
+        <path
+          d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z" />
       </symbol>
 
 
       <symbol viewBox="0 0 24 24" id="jump-to">
-        <path d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"/>
+        <path d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z" />
       </symbol>
 
       <symbol viewBox="0 0 24 24" id="expand">
-        <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"/>
+        <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z" />
       </symbol>
 
     </defs>
   </svg>
 
 </body>
+
 </html>
