--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,11 +64,8 @@
         <% if (stages && stages.length === 0) { %>
         <div class="content">
           <p class="has-text-centered">Stages not found!
-            <span id="msg">
-
-            </span>
-
-
+            <br>
+            <span id="msg"></span>
           </p>
         </div>
 
